# icu-vitals-stream

./: .gitignore  Makefile  README.md
infra/: docker-compose.dev.yml  docker-compose.yml
infra/migrations/: 001_init.sql
infra/schemas/: vitals.alerts.avsc  vitals.raw.avsc  vitals.scored.avsc
infra/scripts/: register_schemas.sh
scorer/: Cargo.toml
scorer/.sqlx/: query-0e51781edec6b2161e1a918d8df60a004aab1ce455f591b1c121e76f6725d798.json  query-1d5c35aedc62a52ad613cad610831eeb9319dc2ae305723e034dd884fd7f84e7.json
scorer/src/: alert.rs  db.rs  main.rs  news2.rs  patient.rs  schema.rs  state.rs  vitals.rs
simulator/: .air.toml  Dockerfile  go.mod  go.sum
simulator/cmd/internal/: patient.go  vitals.go
simulator/cmd/simulator/: main.go  patient.go
simulator/internal/: log.go  state.go  vitals.go
simulator/producer/: noop.go  producer.go
