[package]
name = "scorer"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = { version = "0.39", features = ["cmake-build"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
apache-avro = "0.17"
reqwest = { version = "0.12", features = ["json"] }
dashmap = "6"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"